xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__nested_if.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:if xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" test=\"true()\"><xsl:if test=\"true()\">Hello</xsl:if></xsl:if>\"#)"
---
Ok(Instruction(If(If(
  test: Expression(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          PrimaryExpr(FunctionCall(FunctionCall(
            name: Name(
              name: "true",
              prefix: None,
              namespace: Some("http://www.w3.org/2005/xpath-functions"),
            ),
            arguments: [],
          ))),
        ],
      )),
    ])),
    span: Span(
      start: 63,
      end: 69,
    ),
  ),
  sequence_constructor: [
    Instruction(If(If(
      test: Expression(
        xpath: XPath(Expr([
          Path(PathExpr(
            steps: [
              PrimaryExpr(FunctionCall(FunctionCall(
                name: Name(
                  name: "true",
                  prefix: None,
                  namespace: Some("http://www.w3.org/2005/xpath-functions"),
                ),
                arguments: [],
              ))),
            ],
          )),
        ])),
        span: Span(
          start: 85,
          end: 91,
        ),
      ),
      sequence_constructor: [
        TextNode("Hello"),
      ],
      span: Span(
        start: 72,
        end: 78,
      ),
    ))),
  ],
  span: Span(
    start: 1,
    end: 7,
  ),
))))
