xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__nested_literal_elements.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:if xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" test=\"true()\"><p><another/></p></xsl:if>\"#)"
---
Ok(Instruction(If(If(
  test: Expression(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          PrimaryExpr(FunctionCall(FunctionCall(
            name: Name(
              name: "true",
              prefix: None,
              namespace: Some("http://www.w3.org/2005/xpath-functions"),
            ),
            arguments: [],
          ))),
        ],
      )),
    ])),
    span: Span(
      start: 63,
      end: 69,
    ),
  ),
  sequence_constructor: [
    Content(Element(ElementNode(
      name: Name(
        namespace: "",
        local: "p",
      ),
      attributes: {},
      sequence_constructor: [
        Content(Element(ElementNode(
          name: Name(
            namespace: "",
            local: "another",
          ),
          attributes: {},
          sequence_constructor: [],
          span: Span(
            start: 75,
            end: 82,
          ),
        ))),
      ],
      span: Span(
        start: 72,
        end: 73,
      ),
    ))),
  ],
  span: Span(
    start: 1,
    end: 7,
  ),
))))
