xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__no_fn_namespace_by_default.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:if xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" test=\"fn:true()\">Hello</xsl:if>\"#)"
---
Err(Attribute(XPath(UnknownPrefix(
  span: SimpleSpan(
    start: 63,
    end: 70,
    context: (),
  ),
  prefix: "fn",
))))
