xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__sequence_constructor_nested_in_literal_element.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:if xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" test=\"true()\"><p><xsl:if test=\"true()\">foo</xsl:if></p></xsl:if>\"#)"
---
Ok(Instruction(If(If(
  test: Expression(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          PrimaryExpr(FunctionCall(FunctionCall(
            name: Name(
              name: "true",
              prefix: None,
              namespace: Some("http://www.w3.org/2005/xpath-functions"),
            ),
            arguments: [],
          ))),
        ],
      )),
    ])),
    span: Span(
      start: 63,
      end: 69,
    ),
  ),
  sequence_constructor: [
    Content(Element(ElementNode(
      name: Name(
        name: "p",
        prefix: None,
        namespace: None,
      ),
      attributes: [],
      sequence_constructor: [
        Instruction(If(If(
          test: Expression(
            xpath: XPath(Expr([
              Path(PathExpr(
                steps: [
                  PrimaryExpr(FunctionCall(FunctionCall(
                    name: Name(
                      name: "true",
                      prefix: None,
                      namespace: Some("http://www.w3.org/2005/xpath-functions"),
                    ),
                    arguments: [],
                  ))),
                ],
              )),
            ])),
            span: Span(
              start: 88,
              end: 94,
            ),
          ),
          sequence_constructor: [
            Content(Text("foo")),
          ],
          span: Span(
            start: 75,
            end: 81,
          ),
        ))),
      ],
      span: Span(
        start: 72,
        end: 73,
      ),
    ))),
  ],
  span: Span(
    start: 1,
    end: 7,
  ),
))))
