xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__sequence_type.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:variable xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" xmlns:xs=\"http://www.w3.org/2001/XMLSchema\" name=\"foo\" as=\"xs:string\" select=\"true()\">Hello</xsl:variable>\"#)"
---
Ok(Instruction(Variable(Variable(
  name: Name(
    name: "foo",
    prefix: None,
    namespace: None,
  ),
  select: Some(Expression(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          PrimaryExpr(FunctionCall(FunctionCall(
            name: Name(
              name: "true",
              prefix: None,
              namespace: Some("http://www.w3.org/2005/xpath-functions"),
            ),
            arguments: [],
          ))),
        ],
      )),
    ])),
    span: Span(
      start: 141,
      end: 147,
    ),
  )),
  as_: Some(Item(Item(
    item_type: AtomicOrUnionType(String),
    occurrence: One,
  ))),
  static_: false,
  visibility: None,
  content: [
    TextNode("Hello"),
  ],
  standard: Standard(
    default_collation: None,
    default_mode: None,
    default_validation: None,
    exclude_result_prefixes: None,
    expand_text: None,
    extension_element_prefixes: None,
    use_when: None,
    version: None,
    xpath_default_namespace: None,
  ),
  span: Span(
    start: 1,
    end: 13,
  ),
))))
