xee-xslt-ast/src/snapshots/xee_xslt_ast__instruction__tests__variable_visibility.snap
---
source: xee-xslt-ast/src/instruction.rs
expression: "parse(r#\"<xsl:variable xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" name=\"foo\" visibility=\"public\">Hello</xsl:variable>\"#)"
---
Ok(Variable(Variable(
  name: Name(
    name: "foo",
    prefix: None,
    namespace: None,
  ),
  select: None,
  as_: None,
  static_: false,
  visibility: Some(Public),
  content: [
    TextNode("Hello"),
  ],
  standard: Standard(
    default_collation: None,
    default_mode: None,
    default_validation: None,
    exclude_result_prefixes: None,
    expand_text: None,
    extension_element_prefixes: None,
    use_when: None,
    version: None,
    xpath_default_namespace: None,
  ),
  span: Span(
    start: 1,
    end: 13,
  ),
)))
